; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/cxgb/extr_cxgb_t3fw.c_cxgb_t3b_protocol_sram_modevent.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/cxgb/extr_cxgb_t3fw.c_cxgb_t3b_protocol_sram_modevent.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.firmware = type { i32 }

@.str = private unnamed_addr constant [23 x i8] c"cxgb_t3b_protocol_sram\00", align 1
@t3b_protocol_sram = common dso_local global i32 0, align 4
@t3b_protocol_sram_length = common dso_local global i32 0, align 4
@ENXIO = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i8*)* @cxgb_t3b_protocol_sram_modevent to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cxgb_t3b_protocol_sram_modevent(i32 %0, i32 %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca %struct.firmware*, align 8
  %9 = alloca %struct.firmware*, align 8
  %10 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  %11 = load i32, i32* %6, align 4
  switch i32 %11, label %27 [
    i32 129, label %12
    i32 128, label %24
  ]

12:                                               ; preds = %3
  %13 = load i32, i32* @t3b_protocol_sram, align 4
  %14 = load i32, i32* @t3b_protocol_sram_length, align 4
  %15 = sext i32 %14 to i64
  %16 = call %struct.firmware* @firmware_register(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0), i32 %13, i64 %15, i32 0, i32* null)
  store %struct.firmware* %16, %struct.firmware** %8, align 8
  %17 = load %struct.firmware*, %struct.firmware** %8, align 8
  %18 = icmp eq %struct.firmware* %17, null
  br i1 %18, label %19, label %20

19:                                               ; preds = %12
  br label %22

20:                                               ; preds = %12
  %21 = load %struct.firmware*, %struct.firmware** %8, align 8
  store %struct.firmware* %21, %struct.firmware** %9, align 8
  store i32 0, i32* %4, align 4
  br label %29

22:                                               ; preds = %19
  %23 = load i32, i32* @ENXIO, align 4
  store i32 %23, i32* %4, align 4
  br label %29

24:                                               ; preds = %3
  %25 = call i32 @firmware_unregister(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0))
  store i32 %25, i32* %10, align 4
  %26 = load i32, i32* %10, align 4
  store i32 %26, i32* %4, align 4
  br label %29

27:                                               ; preds = %3
  %28 = load i32, i32* @EINVAL, align 4
  store i32 %28, i32* %4, align 4
  br label %29

29:                                               ; preds = %27, %24, %22, %20
  %30 = load i32, i32* %4, align 4
  ret i32 %30
}

declare dso_local %struct.firmware* @firmware_register(i8*, i32, i64, i32, i32*) #1

declare dso_local i32 @firmware_unregister(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
